# byteboard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DefaultCXX.cmake  Utils.cmake
data/: Splash.ui.qml  main.qml
src/: main.cpp
